# indumentaria-pos

./: AGENTS.md  LICENSE  README.md
api/: .gitignore  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 7207636a6b1e_initial_schema.py
api/app/: config.py  main.py
api/app/inventory/adapters/: mappers.py  models.py  photo_storage.py  repositories.py
api/app/inventory/application/: commands.py  unit_of_work.py  use_cases.py
api/app/inventory/domain/: entities.py  exceptions.py  ports.py  repositories.py  sku.py
api/app/inventory/entrypoints/: dependencies.py  router.py  schemas.py
api/app/reporting/adapters/: queries.py
api/app/reporting/application/: read_models.py
api/app/reporting/entrypoints/: dependencies.py  router.py  schemas.py
api/app/sales/adapters/: mappers.py  models.py  repositories.py  stock_adapter.py
api/app/sales/application/: commands.py  unit_of_work.py  use_cases.py
api/app/sales/domain/: entities.py  exceptions.py  ports.py  repositories.py  services.py
api/app/sales/entrypoints/: dependencies.py  router.py  schemas.py
api/app/shared/adapters/: database.py  exception_handlers.py  unit_of_work.py
api/app/shared/domain/: entity.py  exceptions.py  money.py  quantity.py
api/tests/: conftest.py  test_architecture.py
api/tests/e2e/: test_contracts.py
api/tests/integration/: test_product_repository.py  test_sale_repository.py  test_unit_of_work_atomicity.py
api/tests/unit/inventory/: test_ports.py  test_product.py  test_sku.py  test_use_cases.py
api/tests/unit/sales/: test_installment_calculator.py  test_register_sale_use_case.py  test_sale.py
api/tests/unit/shared/: test_entity.py  test_exception_handlers.py  test_money.py  test_quantity.py
docs/: BACKLOG.md  PLAN-desarrollo-y-testing.md  PRD-indumentaria-pos.md
mobile/: pyproject.toml
mobile/app/: config.py  main.py
mobile/app/api_client/: __init__.py  client.py  errors.py  models.py
mobile/app/state/: app_state.py
mobile/app/views/: balance_view.py  inventory_view.py  sales_calc.py  sales_view.py  ui.py  validators.py
mobile/tests/unit/: test_api_client.py  test_app_smoke.py  test_sales_calc.py  test_validators.py
tests-e2e/: bruno.json
tests-e2e/environments/: test.bru
tests-e2e/flows/: 01-inventariar.bru  02-vender.bru  03-balance.bru
tests-e2e/inventory/: create-product-auto-sku.bru  create-product-duplicado.bru  create-product.bru  get-product.bru
tests-e2e/reporting/: get-balance.bru
tests-e2e/sales/: register-sale-no-cuadra.bru  register-sale-sin-stock.bru  register-sale.bru
