[project]
name = "indumentaria-pos-api"
version = "0.1.0"
description = "POS de indumentaria (FastAPI) — Arquitectura Hexagonal / DDD"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = """
    --strict-markers
    --cov=app
    --cov-report=term-missing
    --cov-fail-under=80
"""
markers = [
    "unit: tests unitarios de dominio sin I/O",
    "integration: tests con DB SQLite en memoria",
    "e2e: tests de API completos con TestClient",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "*/entrypoints/schemas.py",
    "*/adapters/models.py",
    "*/__init__.py",
    "app/main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Depends/Query/Path en defaults es el patrón idiomático de FastAPI.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
