[project]
name = "indumentaria-pos-mobile"
version = "0.1.0"
description = "Frontend Flet del POS de indumentaria"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.85",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = """
    --strict-markers
    --cov=app.api_client
    --cov-report=term-missing
    --cov-fail-under=90
"""
markers = [
    "unit: tests unitarios del cliente HTTP (respx, sin backend real)",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]

[[tool.mypy.overrides]]
module = "app.views.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["flet.*"]
ignore_missing_imports = true
